rentail detail improvements

--- a/src/app/rental/rental-list-item/rental-list-item.component.html
+++ b/src/app/rental/rental-list-item/rental-list-item.component.html
@@ -2,7 +2,7 @@
 <div class="card app-card">
     <img src="{{ rental.image }}" alt="" class="card-img-top">
     <div class="card-block">
-        <h6 class="card-subtitle">Whole {{ rental.category }} &#183; {{ rental.city }}</h6>
+        <h6 class="card-subtitle {{ rental.category }}">{{ rental.shared ? 'Shared' : 'Complete'}} {{ rental.category }} &#183; {{ rental.city }}</h6>
         <h4 class="card-title">{{ rental.title }}</h4>
         <p class="card-text">${{ rental.dailyRate }} per Night &#183; Free Cancelation</p>
     </div>
