--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,18 @@
 @import 'styles/variables';
+
 html, body, p {
     color: $main-text-color;
+}
+
+.apartment {
+    color: #a72da3;
+}
+
+.condo {
+    color: #d68000;
+}
+
+.house {
+    color: #bf1818;
 }
 
