--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">ng6-rent-me</a>
+  <a class="navbar-brand" routerLink="/rentals">ng6-rent-me</a>
   <form class="form-inline">
     <input class="form-control mr-sm-2 app-search" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success my-2 my-sm-0 btn-app-search" type="submit">Search</button>
