--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
@@ -1,7 +1,8 @@
 <div class="booking">
-    <h3 class="booking-price">${{ price }}
+    <h3 class="booking-price">${{ rental.dailyRate }}
         <span class="booking-per-night">per night</span></h3>
       <hr>
+      <form #bookingForm="ngForm">
       <label for="dates">Dates</label>
       <input type="text"
              class="form-control" daterangepicker
@@ -10,10 +11,47 @@
              (selected)="selectedDate($event, daterange)">
     <div class="form-group">
         <label for="guests">Guests</label>
-        <input type="number" class="form-control" id="guests" aria-describedby="emailHelp" placeholder="">
+        <input  [(ngModel)]="newBooking.guests"
+                name="guests"
+                type="number"
+                class="form-control"
+                id="guests"
+                aria-describedby="guests"
+                required>
     </div>
-    <button class="btn btn-danger btn-confirm btn-block">Reserve place now</button>
+    </form>
+    <button (click)="openConfirmModal(content)"
+            class="btn btn-danger btn-confirm btn-block"
+            [disabled]="!bookingForm.form.valid || !newBooking.startAt || !newBooking.endAt">
+            Reserve place now
+    </button>
     <hr>
     <p class="booking-note-title">People are interested in this accomodation</p>
     <p class="booking-note-text">Moren than 1000 people checked this rental in last month.</p> 
 </div>
+
+<ng-template #content let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">Confirm Booking 
+          <p>{{ newBooking.startAt }} to {{ newBooking.endAt }}</p></h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <em>{{ newBooking.days }}</em> nights /
+      <em>{{ rental.dailyRate }}</em> per Night
+      <p>Guests <em>{{ newBooking.guests }}</em></p>
+      <p>Price <em>{{ newBooking.totalPrice }}$</em></p>
+      <p>Do you confirm booking for selected days?</p>
+    </div>
+    <div *ngIf="errors.length > 0" class="alert alert-danger modal-error">
+        <p *ngFor="let error of errors">
+              {{ error }}
+        </p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-app" (click)="createBooking()">Confirm</button>
+      <button type="button" class="btn btn-app" (click)="modal.close('Close click')">Close</button>
+    </div>
+  </ng-template>
