--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.scss
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.scss
@@ -26,7 +26,7 @@
     text-align: center;
     margin-bottom: 10px;
 
-    .btn-bwm {
+    .btn-app {
       padding: 15px;
 
       &:focus, &:hover {
@@ -68,8 +68,6 @@
     font-weight: 300;
   }
 }
-
-// MODAL
 
 .title {
   font-weight: 700;
